fixing badge from not showing

--- a/src/index.css
+++ b/src/index.css
@@ -86,3 +86,13 @@ section {
 .card--price {
   margin-top: auto;
 }
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+}
